--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@ On that note, I do want to mention that this is a proof of concept. It includes 
 I hope you enjoy the game. Best of luck!
 - Tyler
 
-[[...-&gt;Disclaimer]]</tw-passagedata><tw-passagedata pid="130" name="Disclaimer" tags="" position="625,225" size="100,100">Zoom out your browser ( (font: &quot;monospace&quot;)[*`[Ctrl -]`*] ) until green appears in the grey bar and is barely visible (Usually around 75%). Not necessary, just a suggestion. Layouts have not been tested on mobile.
+[[--&gt;-&gt;Disclaimer]]</tw-passagedata><tw-passagedata pid="130" name="Disclaimer" tags="" position="625,225" size="100,100">Zoom out your browser ( (font: &quot;monospace&quot;)[*`[Ctrl -]`*] ) until green appears in the grey bar and is barely visible (Usually around 75%). Not necessary, just a suggestion. Layouts have not been tested on mobile.
 
 (text-colour:red)[**Content Warning:**] Mild swearing, violence, possibly uncomfortable content
 
