fixed missing space in gambler fight

--- a/index.html
+++ b/index.html
@@ -745,7 +745,8 @@ Many rounds have passed now, but out of the corner of your eye, you notice the d
 
 [[Call him out-&gt;Call out cheater]]
 [[Leave-&gt;Common Area]]</tw-passagedata><tw-passagedata pid="29" name="Call out cheater" tags="" position="3325,150" size="100,100">(display: &quot;Gamblers Header&quot;) \
-&quot;Hey&quot; you say offhandedly. &quot;What&#39;s that you got from your pocket?&quot;
+&quot;Hey,&quot; you say offhandedly. &quot;What&#39;s that you got from your pocket?&quot;
+	
 The poker face on the winning player breaks for just a second, but he&#39;s quick to recover. &quot;I don&#39;t know what you&#39;re talking about,&quot; he asserts gruffly, but the other players aren&#39;t fooled. &quot;Pulling this again, Gorbachev?&quot; &quot;I swear I&#39;ll have your head for this!&quot; One of the prisoners dives at the cheater, hands stretched towards his throat. People try to pull them apart, blows are thrown, and it breaks into an all-out scuffle between the inmates.
 	
 You see guards rush over from the north, no doubt attracted by the noise. ($startEvent: &quot;gamblersFighting&quot;)
