typo in realization dialogue

--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@ Slowly the others lay back down, and you do as well. You can faintly hear the so
 You don&#39;t dream tonight. Not after what you did.
 
 (link: &quot;...&quot;)[($skipTime: false)($processMorningEvents: &quot;Upper Shacks&quot;)]</tw-passagedata><tw-passagedata pid="85" name="Escape Finalization" tags="" position="2400,1325" size="100,100">($uiHeader: (dm:)) \
-You stand there for a while as the realization dawns on you: everything&#39;s ready You have everything you need; the stage is set. Tonight has to be when you make your move. You keep your head down for the rest of the day as you wait for nightfall.
+You stand there for a while as the realization dawns on you: everything&#39;s ready. You have everything you need; the stage is set. Tonight has to be when you make your move. You keep your head down for the rest of the day as you wait for nightfall.
 
 (link-reveal-goto: &quot;...&quot;, (history:)&#39;s last)[($setTime: 4)]</tw-passagedata><tw-passagedata pid="86" name="Escape" tags="" position="5200,250" size="100,100">(set: $mapOverlay to &quot;none&quot;) \
 (set: $currentLocation to &quot;upperShacks&quot;) \
