typo in final cutscene

--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@ You swiftly don your coat and dart along the fence, keeping close to the wall. F
 	&lt;img class=&quot;baseImage&quot; src=&quot;https://github.com/Pixelz22/U-Goose-Incident/blob/main/map/hills.png?raw=true&quot;&gt;
 &lt;/div&gt;
 --&gt;
-Before you can change your mind, you dash out into the snow, sprinting as fast as you can. The landscape blurs in your peripheral; all you can see is what lies ahead, Time slips away as white waves roll over the endless horizon. You run until you can&#39;t, then you run some more.
+Before you can change your mind, you dash out into the snow, sprinting as fast as you can. The landscape blurs in your peripheral; all you can see is what lies ahead. Time slips away as white waves roll over the endless horizon. You run until you can&#39;t, then you run some more.
 
 (link: &quot;...&quot;)+(t8n: &quot;fade&quot;)[==Eventually you notice the slope inclining, and you slow your pace, the haze clearing from your mind. You turn back to look at where you&#39;ve been. There must be at least 6, maybe 7 miles between you and the camp. It&#39;s no more than a speck in the distance. You don&#39;t take the time to rest; adrenelaine still pumps through your body. You turn and begin treking up the side of the hill.
 
